Avoid vertical overflow
I noticed this in Firefox, should apply to all browsers.

--- a/app/javascript/stylesheets/hitobito/_form.scss
+++ b/app/javascript/stylesheets/hitobito/_form.scss
@@ -128,7 +128,7 @@ fieldset {
   padding-top: $content-padding / 2;
   padding-bottom: $content-padding / 2;
   margin-left: - $content-padding;
-  margin-right: - $content-padding;
+  margin-right: 0;
   padding-left: $content-padding;
   padding-right: $content-padding;
 }
